# survey_builder

./: .gitignore  Makefile  README.md  docker-compose.yml  er_diagram.dot  main.py  pyproject.toml  requirements.txt  setup.sh
app/crud/: project.py
app/db/: connection.py
backend/: Dockerfile
backend/app/: main.py
backend/app/api/: survey.py
backend/app/crud/: survey.py
backend/app/db/: connection.py  models.py
backend/app/schemas/: survey.py
backend/migrations/: 001_hubs.sql  002_links.sql  003_satellites.sql  004_objectives_and_customization.sql
backend/scripts/: migrate.py  run_migrations.py
frontend/: Dockerfile  README.md  app.py  pyproject.toml
frontend/static/css/: custom.css
frontend/templates/: base.html  category.html  objectives.html  question.html  review.html  splash.html  white_label.html
