[project]
name = "survey-builder-frontend"
version = "1.0.0"
description = "Flask-based frontend for Survey Builder application"
authors = [
    {name = "Survey Builder Team"}
]
dependencies = [
    "Flask>=2.3.3",
    "Werkzeug>=2.3.7",
    "Jinja2>=3.1.2",
    "MarkupSafe>=2.1.3",
    "itsdangerous>=2.1.2",
    "click>=8.1.7",
    "blinker>=1.6.3",
    "requests>=2.31.0",
]
requires-python = ">=3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-flask>=1.2.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
] 